--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "cra-template": "1.2.0",
+    "flowbite": "^2.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
+    "tailwindcss": "^3.4.16",
+    "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
