--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^10.0.6",
     "react-tsparticles": "^2.12.2",
     "tailwindcss": "^3.4.16",
     "tsparticles-slim": "^2.12.0",
